samples/_failures_safe/1761620978_1454ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_60cc74eb.c: In function ‘main’:
./samples/SAFE/__tmp_60cc74eb.c:152:17: error: expected declaration or statement at end of input
  152 |                 } else {
      |                 ^
./samples/SAFE/__tmp_60cc74eb.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_60cc74eb.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_60cc74eb.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_60cc74eb.c:152:17: error: expected declaration or statement at end of input
